--- a/Paintroid/src/main/res/layout-land/pocketpaint_layout_bottom_bar.xml
+++ b/Paintroid/src/main/res/layout-land/pocketpaint_layout_bottom_bar.xml
@@ -105,15 +105,7 @@
                 android:textSize="12sp"
                 android:textColor="@android:color/black"/>
         </LinearLayout>
-    </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:paddingBottom="16dp"
-        android:paddingTop="16dp"
-        android:baselineAligned="false">
         <LinearLayout
             android:id="@+id/pocketpaint_tools_rectangle"
             tools:ignore="UseCompoundDrawables"
@@ -150,6 +142,16 @@
                 android:textColor="@android:color/black"/>
         </LinearLayout>
 
+    </LinearLayout>
+
+    <LinearLayout
+        android:baselineAligned="false"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingBottom="16dp"
+        android:paddingTop="16dp">
+
         <LinearLayout
             android:id="@+id/pocketpaint_tools_pipette"
             tools:ignore="UseCompoundDrawables"
@@ -185,15 +187,7 @@
                 android:textSize="12sp"
                 android:textColor="@android:color/black"/>
         </LinearLayout>
-    </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:paddingBottom="16dp"
-        android:paddingTop="16dp"
-        android:baselineAligned="false">
         <LinearLayout
             android:id="@+id/pocketpaint_tools_text"
             tools:ignore="UseCompoundDrawables"
