--- a/Paintroid/src/main/res/layout/activity_pocketpaint_main.xml
+++ b/Paintroid/src/main/res/layout/activity_pocketpaint_main.xml
@@ -56,8 +56,8 @@
         <LinearLayout
             android:id="@+id/pocketpaint_main_bottom_bar"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/pocketpaint_main_bottom_bar_height"
-            android:background="@color/pocketpaint_background_color"
+            android:layout_height="wrap_content"
+            android:background="@android:color/background_light"
             android:layout_above="@+id/pocketpaint_main_bottom_navigation"
             android:layout_alignParentBottom="false"
             android:layout_alignParentStart="true"
